--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       <section>
         <ul class="todo-list">
           <li class="todo-item">
-            <span class="item">代辦事項</span>
+            <div>
+              <input type="checkbox" class="checkbox">
+              <span class="item">代辦事項</span>
+            </div>
             <button class="closeBtn"><i class="fa-solid fa-trash"></i></button>
           </li>  
         </ul>
